--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,28 @@
-version: '3'
+version: '3.12'
 
 services:
-  db:
-    image: postgres:16-alpine
-    restart: on-failure
-    env_file:
-      - .env
-    expose:
-      - '5432'
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: [ 'CMD-SHELL', '-c', 'pg_isready -U $POSTGRES_USER' ]
-      interval: 10s
-      retries: 5
-      timeout: 5s
-
   app:
     build: .
-    tty: true
-    env_file:
-      - .env
+    container_name: product_type
     ports:
       - '8000:8000'
-    volumes:
-      - .:/app
-    command: sh -c 'alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload'
+    environment:
+      - SQLALCHEMY_DATABASE_URI=postgresql+asyncpg://postgres:${POSTGRES_PASSWORD}@db:5432/$${POSTGRES_DB}
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+    command: sh -c 'alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload'
+
+  db:
+    image: postgres:13
+    container_name: postgres_db
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_NAME}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  pg_data:
+  postgres_data:
