--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,8 +25,8 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        pip install poetry --upgrade pip \
-        poetry config virtualenvs.create false \
+        pip install poetry --upgrade pip 
+        poetry config virtualenvs.create false 
         poetry install --no-root
         poetry add flake8 pytest
     - name: Lint with flake8
