--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,6 +12,10 @@ on:
 permissions:
   contents: read
 
+env:
+  BACK_URL: 'http://127.0.0.1:8000'
+  FRONT_URL: 'http://127.0.0.1:3000'
+
 jobs:
   build:
 
