--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ FRONT_URL=http://127.0.0.1:3000
 
 
 # Database settings
-#POSTGRES_DB=
+POSTGRES_DB=
 POSTGRES_NAME=
 POSTGRES_PASSWORD=
-#POSTGRES_HOST=
+POSTGRES_HOST=
 POSTGRES_PORT=
 
 
